test/corpus/custom_attributes.txt
=========================
ATTRIBUTES: bare
=========================

attribute attr;

----

(schema (custom_attribute name: (ident)))

=========================
ATTRIBUTES: strings
=========================


attribute "attr";
attribute 'rtta';

----

(schema
    (custom_attribute name: (string_constant))
    (custom_attribute name: (string_constant))
)
